<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="applicationName">Ponthatár</string>
    <string name="action_settings">Settings</string>
    <string name="overallMaximalPoint">Maximum</string>
    <string name="grade">Jegy</string>
    <string name="minimalPercentage">Alsó %</string>
    <string name="maximalPercentage">Felső %</string>
    <string name="minimalPoint">Alsó pont</string>
    <string name="maximalPoint">Felső pont</string>
    <string name="grade5">5</string>
    <string name="grade4">4</string>
    <string name="grade3">3</string>
    <string name="grade2">2</string>

 	<string-array name="testPaperTypes">
        <item>Szódolgozat</item>
        <item>Témazáró</item>
    </string-array>   
    <string name="testPaperTypeDefaultValue">Szódolgozat</string>
</resources>