<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PonthatarActivity" >

    <TextView
        android:id="@+id/overallMaximalPointLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overallMaximalPoint" />
    
    <EditText
        android:id="@+id/overallMaximalPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/overallMaximalPointLabel"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/overallMaximalPointLabel"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/testPaperType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/overallMaximalPointLabel"
        android:layout_alignRight="@+id/overallMaximalPoint"
        android:layout_below="@+id/overallMaximalPoint"
        android:entries="@array/testPaperTypes"
        android:prompt="@string/testPaperTypeDefaultValue"/>
    
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/testPaperType"
        android:layout_alignRight="@+id/testPaperType"
        android:layout_below="@+id/testPaperType"
        android:stretchColumns="1,2,3,4" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dip"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip">

            <TextView
                android:id="@+id/gradeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/grade" />

            <TextView
                android:id="@+id/minimalPercentageLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/minimalPercentage"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/maximalPercentageLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/maximalPercentage"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minimalPointLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/minimalPoint"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/maximalPointLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/maximalPoint"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dip" 
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip">

            <TextView
                android:id="@+id/grade5Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/grade5" />

	    <EditText
	        android:id="@+id/grade5MinimalPercentage"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/grade5MaximalPercentage"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:inputType="numberDecimal"
			android:enabled="false" />
	    
	    <TextView
	        android:id="@+id/grade5MinimalPoint"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>	
	    
	    <TextView
	        android:id="@+id/grade5MaximalPoint"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>	
	    	    	    
	    </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:padding="2dip"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip">

            <TextView
                android:id="@+id/grade4Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
		        android:gravity="center"
                android:text="@string/grade4" />

	    <EditText
	        android:id="@+id/grade4MinimalPercentage"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/grade4MaximalPercentage"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:inputType="numberDecimal"
			android:enabled="false"/>
	    
	    <TextView
	        android:id="@+id/grade4MinimalPoint"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>	
	    
	    <TextView
	        android:id="@+id/grade4MaximalPoint"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>	
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:padding="2dip"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip">

            <TextView
                android:id="@+id/grade3Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
     	        android:gravity="center"
                android:text="@string/grade3" />

   	    <EditText
	        android:id="@+id/grade3MinimalPercentage"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/grade3MaximalPercentage"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
			android:enabled="false"/>
	    
	    <TextView
	        android:id="@+id/grade3MinimalPoint"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>	
	    
	    <TextView
	        android:id="@+id/grade3MaximalPoint"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>	
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:padding="2dip"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip">

            <TextView
                android:id="@+id/grade2Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
		        android:gravity="center"
                android:text="@string/grade2" />

   	    <EditText
	        android:id="@+id/grade2MinimalPercentage"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/grade2MaximalPercentage"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
			android:enabled="false"/>
	    
	    <TextView
	        android:id="@+id/grade2MinimalPoint"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>	
	    
	    <TextView
	        android:id="@+id/grade2MaximalPoint"
	        android:gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>	
            
        </TableRow>

    </TableLayout>


</RelativeLayout>